collapse fix

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -164,8 +164,8 @@ a {
         .collapse {
           display: block;
           position: absolute;
-          left: 5px;
-          top: 5px;
+          right:22px;
+          top: 15px;
           z-index: 10;
         }
         
